--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     ]
   },
   "dependencies": {
+    "@supabase/supabase-js": "^2.52.0",
     "axios": "^1.10.0",
     "next": "15.3.5",
     "next-cloudinary": "^6.16.0",
