--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@tanstack/react-query": "^5.83.0",
     "@tanstack/react-query-devtools": "^5.83.0",
     "axios": "^1.10.0",
+    "lucide-react": "^0.536.0",
     "next": "15.3.5",
     "next-cloudinary": "^6.16.0",
     "react": "^19.0.0",
