--- a/package.json
+++ b/package.json
@@ -39,7 +39,9 @@
     "@ngrok/ngrok": "^1.5.1",
     "@tailwindcss/postcss": "^4.1.11",
     "@testing-library/dom": "^10.4.0",
+    "@testing-library/jest-dom": "^6.7.0",
     "@testing-library/react": "^16.3.0",
+    "@types/jest": "^30.0.0",
     "@types/node": "^20",
     "@types/react": "^19.1.9",
     "@types/react-dom": "^19",
