chore: @supabase 패키지 버전 업데이트 및 새로운 의존성 추가

--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     ]
   },
   "dependencies": {
-    "@supabase/supabase-js": "^2.52.0",
+    "@supabase/ssr": "^0.7.0",
+    "@supabase/supabase-js": "^2.56.0",
     "@tanstack/react-query": "^5.83.0",
     "@tanstack/react-query-devtools": "^5.83.0",
     "axios": "^1.10.0",
