--- a/package.json
+++ b/package.json
@@ -29,6 +29,8 @@
     "lucide-react": "^0.536.0",
     "next": "15.3.5",
     "next-cloudinary": "^6.16.0",
+    "pino": "^9.9.5",
+    "pino-pretty": "^13.1.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "sonner": "^2.0.6",
